Bug 1952602 - Implement a backwards-compatibility hack for image alignment. r=sfoster,desktop-theme-reviewers,rpl
I still think we should only do this if absolutely necessary, but this
would restore the status quo for the themes in comment 13.

I'd note that a bunch of those themes are broken already in various ways
(invisible text in popups, invisible tabs in vertical tabs mode, ...).

Differential Revision: https://phabricator.services.mozilla.com/D276326

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -205,12 +205,16 @@ body {
       }
     }
   }
+}
 
-  :root[lwtheme] & {
-    background-image: var(--lwt-additional-images);
-    background-repeat: var(--lwt-background-tiling);
-    background-position: var(--lwt-background-alignment);
-  }
+/* Images go on the body by default, unless they are aligned in the y axis in
+ * which case they go on the toolbox for backwards compatibility */
+:root[lwtheme]:not([lwtheme-image-y-align]) body,
+:root[lwtheme][lwtheme-image-y-align] #navigator-toolbox {
+  background-image: var(--lwt-additional-images);
+  background-repeat: var(--lwt-background-tiling);
+  background-position: var(--lwt-background-alignment);
+
   /* When a theme defines both theme_frame and additional_backgrounds, show
      the latter atop the former. */
   :root[lwtheme-image] & {
